force-app/main/default/objects/Hr_Integration_Provider__mdt/Hr_Integration_Provider__mdt.object-meta.xml
<CustomObject>
    <description>Registry of HRIS workforce sync providers</description>
    <label>HR Integration Provider</label>
    <pluralLabel>HR Integration Providers</pluralLabel>
</CustomObject>