force-app/main/default/objects/Hr_Integration_Provider__mdt/fields/Absence_Report_Path__c.field-meta.xml
<CustomField>
    <fullName>Absence_Report_Path__c</fullName>
    <label>Absence Report Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>