force-app/main/default/objects/Hr_Integration_Provider__mdt/fields/Is_Implemented__c.field-meta.xml
<CustomField>
    <fullName>Is_Implemented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Implemented</label>
    <type>Checkbox</type>
</CustomField>