force-app/main/default/objects/Hr_Integration_Provider__mdt/fields/Provider_Key__c.field-meta.xml
<CustomField>
    <fullName>Provider_Key__c</fullName>
    <label>Provider Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>