force-app/main/default/objects/Hr_Integration_Provider__mdt/fields/Schedule_Report_Path__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Report_Path__c</fullName>
    <label>Schedule Report Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>