force-app/main/default/objects/Hr_Integration_Provider__mdt/fields/Setup_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Setup_Guidance__c</fullName>
    <label>Setup Guidance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>