force-app/main/default/objects/Hr_Integration_Provider__mdt/fields/Worker_Id_User_Field__c.field-meta.xml
<CustomField>
    <fullName>Worker_Id_User_Field__c</fullName>
    <label>Worker Id User Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>